src/test/deca/syntax/valid/parser/extension/array_creation_zeros_Ndim.deca
{
    int[][][] a = new int[10][5][3];
}