src/test/deca/syntax/invalid/parser/extension/array_creation_dim_expr_incomplete2.deca
{
    int[][] a = new int[2][];
}